# owlv2-torch

./: .coverage  .gitignore  README.md  clean_weights.py  compare_hf_torch.py  compare_hf_torch_func.py  dior_res.txt  eval.sh  owlv2_state.txt  pyproject.toml  test_hf.py  test_preprocess.py  test_pt.py  test_pt_func.py  test_pt_trt.py  train.py  train_obb.py
OWLv2torch/: __init__.py  _version.py
OWLv2torch/hf_version/: image_processing_owlv2.py  modeling_owlv2.py
OWLv2torch/openclip_version/: __init__.py  owlv2.py
OWLv2torch/torch_func/: owlv2.py  owlv2_config.py
OWLv2torch/torch_version/: __init__.py  build_engine.py  export.py  flame.py  loss.py  owlv2.py  owlv2_tensorrt.py  prototypes.py  temp.ipynb
OWLv2torch/utils/: hf_hub_utils.py  query_batching.py  tokenizer.py
hf_version/: configuration_owlv2.py  modeling_owlv2.py  processing_owlv2.py
prototype_train/: train.py
tests/: test_dior_flame_autolabel.py  test_flame_feedback.py  test_loss_hard_negatives.py  test_pt.py  test_pt_func.py  test_query_batching.py  utils.py
tools/: ovd_eval.py  test_dior.py  test_dior_flame.py  test_dota.py
torch_func/: owlv2.py  owlv2_config.py  owlv2_weights.py
torch_version/: owlv2.py
