[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "OWLv2torch"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "A brief description of your OWLv2torch package"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["owl", "torch", "deep learning"]
license = {text = "None"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
version = "0.1"
dependencies = [
    "ftfy",
    "EzLogger @ git+https://github.com/felix-lindgren/Logging",
    "torch>=1.13.1",
    "torchvision>=0.14.1",
    "safetensors>=0.5.3",
    "huggingface-hub>=0.16.4",
    "regex>=2024.4.16",
    "matplotlib>=3.5.3",
    "transformers>=4.30.2",
    "scipy>=1.7.3",
]

[project.optional-dependencies]
train = [
    "pycocotools>=2.0.7",
    "torchmetrics>=0.11.4",
    "faster-coco-eval>=1.6.8",
    "mlflow>=1.30.1",
]
dev = [
    "pytest>=6.0",
    "pytest-cov",
]
trt = [
    "tensorrt>=10.0.0",
    "onnx>=1.15.0",
    "onnxsim>=0.4.36",
]

# Use NVIDIA's PyPI index for TensorRT wheels. ``explicit = true`` restricts it
# to packages that explicitly opt in below, so normal PyPI deps are unaffected.
[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com/"
explicit = true

[tool.uv.sources]
tensorrt = { index = "nvidia" }

[tool.setuptools_scm]
write_to = "OWLv2torch/_version.py"

[tool.setuptools.packages.find]
where = ["."]
include = ["OWLv2torch*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
addopts = "--cov=OWLv2torch"
testpaths = [
    "tests",
]
